@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
 #
 
+2005-10-18 11:05:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-19
+
+    Summary:
+      web, encode cookies on response serialization (use itools.schemas)
+    Revision:
+      itools--main--0.11--patch-19
+
+
+    modified files:
+     Changelog web/response.py
+
+
 2005-10-18 11:03:40 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-18
 
     Summary:
